fix: mapeamento parametros fisiologicos